<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="launcherDialer">Phone</string>
    <string name="people">Contacts</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactPickerActivityTitle">Choose a contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="menu_joinAggregate">Join</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="menu_not_redirect_calls_to_vm">Voicemail not in use</string>
    <string name="redirect_calls_to_vm_confirm_message">"If you have not applied to the operator of this business, please do not turn on. Otherwise, you may not be able to receive calls from this contact."</string>
    <string name="redirect_calls_to_vm_confirm_text">"Turn on"</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">OK</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="menu_discard">Discard</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful">Contact widget added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts.</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="import_from_sim">Import from SIM card 1</string>
    <string name="import_from_sdcard" product="default">Import from storage</string>
    <string name="export_to_sdcard" product="default">Export to storage</string>
    <string name="share_visible_contacts">Share contacts</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_clear_frequents">Clear frequents</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Import/export</string>
    <string name="menu_share">Share</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="menu_help">Help</string>
    <string name="preference_displayOptions">Display options</string>
    <string name="callrecordview_menu_delete">Delete call log</string>
    <string name="callrecordview_menu_show">Call log filter</string>
    <string name="callrecordview_menu_paste">Paste</string>
    <string name="calllog_menu_blacklist">Add to blacklist</string>
    <string name="calllog_menu_edit_before_call">Edit before calling</string>
    <string name="calllog_menu_send_sms">Send a message</string>
    <string name="add_blacklist">Add to blacklist</string>
    <string name="remove_blacklist">Remove from blacklist</string>
    <string name="preference_import">Import</string>
    <string name="preference_export">Export</string>
    <string name="preference_others">Others</string>
    <string name="wipe_data">Clear data</string>
    <string name="check_unsynchronized_accounts">Check unsynchronized frequency</string>
    <string name="display_only_phones">Only show contacts with phone number</string>
    <string name="display_sim_contacts">Show SIM contacts</string>
    <string name="preference_remove_duplicate"> Merge duplicate contacts </string>
    <string name="preference_import_export">Import/Export</string>
    <string name="preference_import_export_title">Import/Export contacts</string>
    <string name="import_vcard_description" product="default">Import contacts from your SD card</string>
    <string name="export_vcard_description" product="default">Export vCard to your SD card</string>
    <string name="export_to_sim">Export to SIM card 1</string>
    <string name="pref_title_account_import">Import from account</string>
    <string name="pref_title_import_from_account">Import to Xiaomi account</string>
    <string name="pref_summary_import_from_account">Import contacts in Google and Exchange accounts to my Xiaomi Account</string>
    <string name="select_show_contacts">To display the contact </string>
    <string name="pref_key_rebuild_t9_index_title">Rebuild index data</string>
    <string name="pref_key_rebuild_t9_index_message">Able to fix contact search failure</string>
    <string name="pref_key_photo">Photo</string>
    <string name="pref_key_photo_word_title">Auto select photo for contacts</string>
    <string name="pref_key_photo_word_summary">Auto select a photo for contacts without one. </string>
    <string name="preference_display">Display</string>
    <string name="preference_simple_mode_title">Simple mode</string>
    <string name="preference_simple_mode_description">List item does not display the avatar, attribution and company</string>
    <string name="preference_contacts">Contact</string>
    <string name="preference_contacts_display">Contact display</string>
    <string name="preference_contacts_more">Organise your contacts</string>
    <string name="preference_telocation_title">Telocation</string>
    <string name="preference_phone">Phone</string>
    <string name="preference_dial_pad_touch_tone_title">Dial pad touch tones</string>
    <string name="preference_auto_ip_title">Automatic IP</string>
    <string name="preference_auto_ip_summary_disable">Not enabled</string>
    <string name="preference_phone_more_title">More phone settings</string>
    <string name="cloud_antispam_title" >Identify unknown number smartly</string>
    <string name="option_view_contact">View</string>
    <string name="option_edit_contact">Edit</string>
    <string name="option_delete_contact">Delete</string>
    <string name="option_send_to_desktop">Send to desktop</string>
    <string name="option_not_star">Unfavorite</string>
    <string name="option_not_in_group">Remove</string>
    <string name="cloud_antispam_mark" >Mark</string>
    <string name="menu_new_favorite_action_bar">"New"</string>
    <string name="menu_bar_group_add">Add</string>
    <string name="menu_bar_group_sms">Group SMS</string>
    <string name="menu_bar_group_ringtone">Group ringtone</string>
    <string name="menu_bar_group_rename">Rename</string>
    <string name="menu_bar_group_delete">Delete</string>
    <string name="preference_smart_group_title">Smart grouping</string>
    <string name="preference_smart_group_company_title">By company</string>
    <string name="preference_smart_group_company_summary">Group contacts by company</string>
    <string name="preference_smart_group_location_title">By location</string>
    <string name="preference_smart_group_location_summary">Grouped according to area code</string>
    <string name="preference_smart_group_frequency_title">By recently contacted</string>
    <string name="preference_smart_group_frequency_summary">Group by latest calls or SMS</string>
    <string name="import_from_other_phone">Import from other phone</string>
    <string name="call_record_setting_miui">Record settings</string>
</resources>