<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_import"
        android:title="@string/preference_import">
        <PreferenceScreen
            android:key="pref_key_import_from_sdcard"
            android:title="@string/import_from_sdcard"
            android:summary="@string/import_vcard_description" />
        <PreferenceScreen
            android:key="pref_key_import_from_sim"
            android:title="@string/import_from_sim" />
        <PreferenceScreen
            android:key="pref_key_import_from_other_phone"
            android:title="@string/import_from_other_phone" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_export"
        android:title="@string/preference_export">
        <PreferenceScreen
            android:key="pref_key_export_to_sdcard"
            android:title="@string/export_to_sdcard"
            android:summary="@string/export_vcard_description" />
        <PreferenceScreen
            android:key="pref_key_export_to_sim"
            android:title="@string/export_to_sim" />
        <PreferenceScreen
            android:key="pref_key_share_visible_contacts"
            android:title="@string/share_visible_contacts" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_account_import"
        android:title="@string/pref_title_account_import">
        <PreferenceScreen
            android:key="pref_key_import_from_account"
            android:title="@string/pref_title_import_from_account"
            android:summary="@string/pref_summary_import_from_account" />
    </PreferenceCategory>
</PreferenceScreen>
