<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="displayOptions"
        android:title="@string/preference_displayOptions">
        <com.android.contacts.preference.SortOrderPreference
            android:key="sortOrder"
            android:title="@string/display_options_sort_list_by"
            android:dialogTitle="@string/display_options_sort_list_by" />

        <com.android.contacts.preference.DisplayOrderPreference
            android:key="displayOrder"
            android:title="@string/display_options_view_names_as"
            android:dialogTitle="@string/display_options_view_names_as" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_import_export">
        <PreferenceScreen
            android:key="pref_key_import_export"
            android:title="@string/preference_import_export_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/select_show_contacts" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="only_phones"
            android:persistent="true"
            android:title="@string/display_only_phones" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_display_sim_contacts"
            android:persistent="false"
            android:title="@string/display_sim_contacts" />
        <PreferenceScreen
            android:key="pref_key_smart_group"
            android:title="@string/preference_smart_group_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_key_photo" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_word_photo"
            android:persistent="false"
            android:title="@string/pref_key_photo_word_title"
            android:summary="@string/pref_key_photo_word_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="others"
        android:title="@string/preference_others" >
        <PreferenceScreen
            android:key="pref_key_remove_duplicate_contact"
            android:title="@string/preference_remove_duplicate" />
        <PreferenceScreen
            android:key="pref_key_rebuild_t9_index"
            android:title="@string/pref_key_rebuild_t9_index_title"
            android:summary="@string/pref_key_rebuild_t9_index_message" />
        <PreferenceScreen
            android:key="pref_key_wipe_data"
            android:title="@string/wipe_data" />

        <com.android.contacts.preference.CheckUnsynchronizedPreference
            android:dialogTitle="@string/check_unsynchronized_accounts"
            android:key="pref_key_check_unsynchronized_accounts"
            android:title="@string/check_unsynchronized_accounts" />
    </PreferenceCategory>

</PreferenceScreen>
