<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_key_smart_group_company"
        android:persistent="true"
        android:summary="@string/preference_smart_group_company_summary"
        android:title="@string/preference_smart_group_company_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_key_smart_group_location"
        android:persistent="true"
        android:summary="@string/preference_smart_group_location_summary"
        android:title="@string/preference_smart_group_location_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_key_smart_group_frequency"
        android:persistent="true"
        android:summary="@string/preference_smart_group_frequency_summary"
        android:title="@string/preference_smart_group_frequency_title" />

</PreferenceScreen>