<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/send_sms"
        android:title="@string/calllog_menu_send_sms"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/delete"
        android:title="@string/callrecordview_menu_delete"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/ip_call"
        android:showAsAction="never" />

    <item
        android:id="@+id/edit_before_call"
        android:title="@string/calllog_menu_edit_before_call"
        android:showAsAction="never" />

    <item
        android:id="@+id/firewall"
        android:title="@string/calllog_menu_blacklist"
        android:showAsAction="never" />

    <item
        android:id="@+id/mark_antispam"
        android:title="@string/cloud_antispam_mark"  />
</menu>
