<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_group_add"
        android:icon="@miui:drawable/v5_bottom_bar_new_icon_light"
        android:title="@string/menu_bar_group_add"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_group_sms"
        android:icon="@drawable/ic_menu_group_sms"
        android:title="@string/menu_bar_group_sms"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_group_ringtone"
        android:icon="@drawable/ic_menu_group_ringtone"
        android:title="@string/menu_bar_group_ringtone"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_group_rename"
        android:icon="@drawable/ic_menu_group_rename"
        android:title="@string/menu_bar_group_rename"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_group_delete"
        android:icon="@miui:drawable/v5_bottom_bar_delete_icon_light"
        android:title="@string/menu_bar_group_delete"
        android:showAsAction="ifRoom|withText"/>

</menu>