<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@miui:drawable/v5_bottom_bar_new_icon_light"
        android:title="@string/menu_newContact"/>
    <item
        android:id="@+id/send"
        android:icon="@miui:drawable/v5_bottom_bar_send_icon_light"
        android:title="@miui:string/send"/>
    <item
        android:id="@+id/addToBlackList"
        android:icon="@drawable/ic_menu_blacklist"
        android:title="@string/add_blacklist"/>
    <item
        android:id="@+id/removeBlackList"
        android:icon="@drawable/ic_menu_remove_blacklist"
        android:title="@string/remove_blacklist"/>
    <item
        android:id="@+id/mark"
        android:icon="@drawable/ic_menu_mark"
        android:title="@string/cloud_antispam_mark"/>

</menu>
